# aws-dev

./: .gitignore  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
cdk/: .gitignore  app.py  pyproject.toml
cdk/cdk_sandbox/: cdk_sandbox_stack.py
cdk/tests/unit/: test_cdk_sandbox_stack.py
glue/: .gitignore  docker-compose.yml
glue/jupyter-notebooks/: sandbox.ipynb
jupyter/: jupyter_start.sh
python/: pyproject.toml
python/python_sandbox/: main.py
sam/: samconfig.yml  template.yml
